내 정보 > 내 포인트 > 소멸 예정 포인트 -- 작업 중

--- a/src/html/mypage/SCR_GA_CI_0601_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0601_M01.html
@@ -14,7 +14,7 @@
                 <div class="contents">
                     <div class="point-history">
                         <section>
-                            <div class="total-point">
+                            <div class="point-summary">
                                 <h3 class="title">보유 포인트</h3>
                                 <div class="value">
                                     <span>1,000,000P </span>
