--- a/src/status.html
+++ b/src/status.html
@@ -1244,13 +1244,41 @@
                         <tr>
                             <td></td>
                             <td></td>
+                            <td>(no data)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/mypage</td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0601_M01_01.html">SCR_GA_CI_0601_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                             <td>소멸예정포인트</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0602_M01.html">SCR_GA_CI_0602_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>(no data)</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/mypage</td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0602_M01_01.html">SCR_GA_CI_0602_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
