내 정보 > 내 등급 > 내 이동거리 -- 마일스톤 per km 추가

--- a/src/html/mypage/SCR_GA_CI_0401_P05.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P05.html
@@ -74,8 +74,114 @@
                         <span class="dot"></span>
                         <span class="distance">5,000km</span>
                     </li>
+                    <li class="milestone">
+                        <span class="name">뉴델리</span>
+                        <span class="dot"></span>
+                        <span class="distance">5,500km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">알래스카</span>
+                        <span class="dot"></span>
+                        <span class="distance">6,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">모스크바</span>
+                        <span class="dot"></span>
+                        <span class="distance">6,500km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">몰디브</span>
+                        <span class="dot"></span>
+                        <span class="distance">7,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">하와이</span>
+                        <span class="dot"></span>
+                        <span class="distance">7,500km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">카이로</span>
+                        <span class="dot"></span>
+                        <span class="distance">8,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">로마</span>
+                        <span class="dot"></span>
+                        <span class="distance">8,500km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">파리</span>
+                        <span class="dot"></span>
+                        <span class="distance">9,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">LA</span>
+                        <span class="dot"></span>
+                        <span class="distance">9,500km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">나이로비</span>
+                        <span class="dot"></span>
+                        <span class="distance">10,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">뉴욕</span>
+                        <span class="dot"></span>
+                        <span class="distance">11,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">멕시코시티</span>
+                        <span class="dot"></span>
+                        <span class="distance">12,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">하바나</span>
+                        <span class="dot"></span>
+                        <span class="distance">13,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">이스타섬</span>
+                        <span class="dot"></span>
+                        <span class="distance">14,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">보고타</span>
+                        <span class="dot"></span>
+                        <span class="distance">15,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">리바</span>
+                        <span class="dot"></span>
+                        <span class="distance">16,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">세종기지</span>
+                        <span class="dot"></span>
+                        <span class="distance">17,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">리우</span>
+                        <span class="dot"></span>
+                        <span class="distance">18,000km</span>
+                    </li>
+                    <li class="milestone">
+                        <span class="name">산티아고</span>
+                        <span class="dot"></span>
+                        <span class="distance">19,000km</span>
+                    </li>
+                    <li class="milestone done">
+                        <span class="name">코르도바</span>
+                        <span class="dot"></span>
+                        <span class="distance">20,000km</span>
+                    </li>
+                    <li class="milestone finish">
+                        <span>서울</span>
+                        <span class="dot"></span>
+                        <span>40,000km</span>
+                    </li>
                     <!-- <li class="milestone finish">
                         <span>서울</span>
+                        <span class="dot"></span>
                         <span>40,000km</span>
                     </li> -->
                 </ol>
