내 정보 > 내 등급 > 내 이동거리 -- 마일스톤 per km 추가

--- a/src/html/mypage/SCR_GA_CI_0401_P05.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P05.html
@@ -169,12 +169,12 @@
                         <span class="dot"></span>
                         <span class="distance">19,000km</span>
                     </li>
-                    <li class="milestone done">
+                    <li class="milestone">
                         <span class="name">코르도바</span>
                         <span class="dot"></span>
                         <span class="distance">20,000km</span>
                     </li>
-                    <li class="milestone finish">
+                    <li class="milestone">
                         <span>서울</span>
                         <span class="dot"></span>
                         <span>40,000km</span>
