내 정보 > 내 등급 > 내 이동거리 -- 작업 중

--- a/src/html/mypage/SCR_GA_CI_0401_P05.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P05.html
@@ -16,7 +16,8 @@
             </div>
             <div class="navigation">
                 <ol>
-                    <li class="milestone start">
+                    <!-- <li class="milestone start"> -->
+                    <li class="milestone start done">
                         <span class="name">우리집</span>
                         <span class="dot"></span>
                         <span class="distance">0km</span>
