--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -22,29 +22,36 @@
 						<section class="section">
 							
 							<div class="car-info">
-								<div class="module">
-									<a href="#">
-										<span class="badge">test</span>
-										<span class="img"><img src="/images/contents/img_car_dummy01.jpg" alt=""></span>
+								<a href="#">
+									<div class="module">
+										<span class="img"><img src="/images/contents/img_car_dummy01.png" alt=""></span>
 										<div class="info">
+											<div class="tag-module">
+												<span class="tag tag-car plus">Plus</span>
+												<span class="tag tag-car new">신차</span>
+											</div>
+											<p class="ev">[Greencar Plus]</p> 
 											<strong>145허4454</strong>
-											<span class="name">셀토스 1.6(디젤)</span>
-											<span class="option">디젤 170원/km</span>
+											<span class="name">셀토스 1.6</span>
+											<span class="option">디젤 <em>170원/km</em></span>
 										</div>
-									</a>
+										<i class="ico arrow-right-nav030 lg"></i>
+									</div>
+								</a>
+								<div class="tag-info-module">
+									<span class="tag tag-info ico01">99%</span>
+									<span class="tag tag-info ico02">76%</span>
+									<span class="tag tag-info ico03">세차</span>
+									<span class="tag tag-info ico04">45% 할인</span>
 								</div>
-								<div class="tag-module">
-									<span class="tag">휘발유76%</span>
-									<span class="tag">세차완료</span>
-									<span class="tag sale">55%할인</span>
+								
+								<div class="title-area grid-flex">
+									<h3 class="title-xs flex col-3">주행요금</h3>
+									<div class="flex col-7">170원 / km</div>
 								</div>
+								<p class="desc-sm">* 주행요금은 반납 후 실주행거리에 따라 별도로 청구됩니다.</p>
 							</div>
 	
-							<div class="title-area grid-flex">
-								<h3 class="title-xs flex col-3">주행요금</h3>
-								<div class="flex col-7">170원 / km</div>
-							</div>
-							<p class="desc-sm">* 주행요금은 반납 후 실주행거리에 따라 별도로 청구됩니다.</p>
 	
 						</section>
 	
